# trendline-breakout-bot

./: .env.example  .gitignore  README.md  alerts.db-shm  alerts.db-wal  lightweight-charts-리서치.md  pyproject.toml
deploy/: README.md  bootstrap.sh  breakout-bot.service  setup.sh
docs/superpowers/plans/: 2026-05-06-trendline-breakout-bot.md  2026-05-07-trendline-breakout-bot-v2-websocket.md
scripts/: backtest.py  backtest_full.py  push_backtest.py  seed_alerts.py  smoke_test.py
src/: alert_db.py  analyzer.py  binance_poller.py  binance_rest.py  binance_ws.py  config.py  filters.py  main.py  models.py  state_machine.py  swing_detector.py  telegram_notifier.py  trendline.py  trendline_manager.py
tests/: test_alert_db.py  test_analyzer.py  test_filters.py  test_state_machine.py  test_swing_detector.py  test_telegram_notifier.py  test_trendline.py
